home page overflow and create route reset bugs fixed

--- a/PlotTwist/src/routes/homePage/homePage.css
+++ b/PlotTwist/src/routes/homePage/homePage.css
@@ -2,6 +2,7 @@
   height: 100dvh;
   background-color: var(--bgPastelGreen);
   position: relative;
+  overflow: hidden;
 }
 
 .layers {
